usr.bin/tput/tput.c				patch

Fix tput support for setaf terminfo sequence. PR#39883.
	[jnemeth, ticket #1468]